--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -19,6 +19,10 @@ jobs:
           ruby-version: .ruby-version
           bundler-cache: true
 
+        #
+      - name: Make bin scripts executable
+        run: chmod +x bin/*
+        #
       - name: Scan for common Rails security vulnerabilities using static analysis
         run: bin/brakeman --no-pager
 
@@ -49,7 +53,10 @@ jobs:
         with:
           ruby-version: .ruby-version
           bundler-cache: true
-
+        #
+      - name: Make bin scripts executable
+        run: chmod +x bin/*
+        #
       - name: Lint code for consistent style
         run: bin/rubocop -f github
 
