--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -81,7 +81,10 @@ jobs:
         with:
           ruby-version: .ruby-version
           bundler-cache: true
-
+#
+      - name: Make bin scripts executable
+        run: chmod +x bin/*
+#
       - name: Run tests
         env:
           RAILS_ENV: test
