--- a/config/database.yml
+++ b/config/database.yml
@@ -6,7 +6,7 @@ default: &default
   pool: <%= ENV.fetch("RAILS_MAX_THREADS") { 5 } %>
   host: localhost
   username: sa 
-  password: password123
+  password: P@ssw0rd123
 
 development:
   <<: *default
