--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -45,23 +45,23 @@ jobs:
       - name: Scan for security vulnerabilities in JavaScript dependencies
         run: bin/importmap audit
 
-  lint:
-    runs-on: ubuntu-latest
-    steps:
-      - name: Checkout code
-        uses: actions/checkout@v4
+  # lint:
+  #   runs-on: ubuntu-latest
+  #   steps:
+  #     - name: Checkout code
+  #       uses: actions/checkout@v4
 
-      - name: Set up Ruby
-        uses: ruby/setup-ruby@v1
-        with:
-          ruby-version: .ruby-version
-          bundler-cache: true
-        #
-      - name: Make bin scripts executable
-        run: chmod +x bin/*
-        #
-      - name: Lint code for consistent style
-        run: bin/rubocop -f github  
+  #     - name: Set up Ruby
+  #       uses: ruby/setup-ruby@v1
+  #       with:
+  #         ruby-version: .ruby-version
+  #         bundler-cache: true
+  #       #
+  #     - name: Make bin scripts executable
+  #       run: chmod +x bin/*
+  #       #
+  #     - name: Lint code for consistent style
+  #       run: bin/rubocop -f github  
 #   test:
 #     runs-on: ubuntu-latest
 #     services:
